tests/ui/const-generics/raw-ptr-const-param.min.stderr
error: using raw pointers as const generic parameters is forbidden
  --> $DIR/raw-ptr-const-param.rs:8:23
   |
LL | struct Const<const P: *const u32>;
   |                       ^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error[E0308]: mismatched types
  --> $DIR/raw-ptr-const-param.rs:11:40
   |
LL |     let _: Const<{ 15 as *const _ }> = Const::<{ 10 as *const _ }>;
   |            -------------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `{0xf as *const u32}`, found `{0xa as *const u32}`
   |            |
   |            expected due to this
   |
   = note: expected struct `Const<{0xf as *const u32}>`
              found struct `Const<{0xa as *const u32}>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
